<resources>
    <string name="app_name">Doctor Appointments</string>
    <string name="title">Add Patient</string>
    <string name="TVFisrtName">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="gendre">Gendre</string>
    <string name="phoneNB">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="menuB" />
    <string name="test1">Error in retrieving data</string>
</resources>